sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:6: error: not found: value getValeurs
    for (i<-0 to getValeurs()-2){
                 ^AlgCocktailSort1:11: error: not found: value getValeurs
      for (i<-0 to getValeurs()-2){
                   ^AlgCocktailSort1:12: error: not found: value getValeurs
        if(plusPetit(getValeurs()-i-1,getValeurs()-i-2)){
                     ^AlgCocktailSort1:12: error: not found: value getValeurs
        if(plusPetit(getValeurs()-i-1,getValeurs()-i-2)){
                                      ^