sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var trie: Boolean=false
  while(trie==false){
    trie = true
    for (i<-0 to getValeurs()-2){
      if(plusPetit(i,i+1)){
        echange(i,i+1)

      }
      for (i<-0 to getValeurs()-2){
        if(plusPetit(getValeurs()-i-1,getValeurs()-i-2)){
          echange(i,i+1)
          trie = false
        }
      }
    }
  }
}

